exports[`(.not).toHaveFailedDependencyStatus > using axios > .not.toHaveFailedDependencyStatus > fails when response have status code 424 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveFailedDependencyStatus()</intensity>

Expected status code to not be 424 received:
  <red>424</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 424,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveFailedDependencyStatus > using axios > .toHaveFailedDependencyStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveFailedDependencyStatus()</intensity>

Expected status code to be 424 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveFailedDependencyStatus > using got > .not.toHaveFailedDependencyStatus > fails when response have status code 424 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveFailedDependencyStatus()</intensity>

Expected status code to not be 424 received:
  <red>424</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 424,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveFailedDependencyStatus > using got > .toHaveFailedDependencyStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveFailedDependencyStatus()</intensity>

Expected status code to be 424 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
